mem_dbg/tests/snapshots/test_ref_dedup_insta__rc_without_follow_rcs@x86.snap
---
source: mem_dbg/tests/test_ref_dedup_insta.rs
assertion_line: 116
expression: output
---
20 B 100.00% ⏺: test_ref_dedup_insta::SharedRc
 8 B  40.00% ├╴name: &str
 4 B  20.00% ├╴first: alloc::rc::Rc<alloc::vec::Vec<i32>>
 4 B  20.00% ├╴second: alloc::rc::Rc<alloc::vec::Vec<i32>>
 4 B  20.00% ╰╴different: alloc::rc::Rc<alloc::vec::Vec<i32>>
